--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Nanum+Pen+Script&display=swap');
+/*
+font-family: 'Gamja Flower', cursive;
+font-family: 'Nanum Pen Script', cursive;
+*/
+
 * {
   box-sizing: inherit;
 }
@@ -5,4 +11,8 @@
 a {
   color: inherit;
   text-decoration: none;
+}
+
+body {
+  margin: 0;
 }
