[Improve] introduce contents
- change to dangerouslySetInnerHTML
- improve contents css

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 font-family: 'Gamja Flower', cursive;
 font-family: 'Nanum Pen Script', cursive;
 */
+@import url('//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css');
+
 
 * {
   box-sizing: inherit;
@@ -15,4 +17,30 @@ a {
 
 body {
   margin: 0;
+}
+
+code {
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(27, 31, 35, 0.05);
+  border-radius: 6px;
+  font-family: 'D2Coding', monospace;
+}
+
+pre {
+  background: #f4f4f4;
+  border: 1px solid #ddd;
+  border-left: 3px solid #38d9a9;
+  color: #666;
+  page-break-inside: avoid;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em 1.5em;
+  display: block;
+  word-wrap: break-word;
+  font-family: 'D2Coding', monospace;
 }
