[improve & Refactor] common component buttons and Links
- create styled components
- improve for Header Links
- improve for introduce and main Buttons

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,12 @@ font-family: 'Gamja Flower', cursive;
 font-family: 'Nanum Pen Script', cursive;
 */
 @import url('//cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-full.css');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
+/* font-family: 'Noto Sans KR', sans-serif; */
 
 * {
   box-sizing: inherit;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 a {
